# python-project-template

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
tests/: conftest.py
